# UDPipe_Julia_Wrapper

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_jll.jl  build_tarballs.jl
src/: Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  ProcessingError.cpp  ProcessingError.hpp  udpipejl.cpp
